# IRC-server

./: CMakeLists.txt  ReadMe.md  test_chat.sh  test_get_msgs.sh  test_ping.sh
client/include/: chat_client.h  command_handler.h
client/src/: chat_client.cpp  command_handler.cpp  main.cpp
data/: config.json  servers.json
doc/: ReadMe_IRC.md  irc_server_diagram.puml
domain/include/: password_hasher.h
server/include/: auth_controller.h  logger.h  msg_controller.h  room_controller.h  token_monitor_plugin.h  token_storage.h  user_controller.h
server/src/: auth_controller.cpp  chat_service_plugin.cpp  database_plugin.cpp  main.cpp  room_controller.cpp  token_monitor_plugin.cpp  token_storage.cpp
